change some of the css to prevent container overflow on homepage

--- a/style.css
+++ b/style.css
@@ -1,54 +1,19 @@
 #container {
     scroll-snap-type: y mandatory;
     overflow: auto;
-    width: 100vw;
     height: 100vh;
 }
-
 body {
     overflow: hidden;
 }
-
-#home-container {
-    scroll-snap-align: center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-#content-container {
-    height: 100%;
-    width: 50%;
-    background-color: whitesmoke;
-    font-size: 180%;
-    display: flex;
-    flex-flow: column;
-    justify-content: space-around;
-}
-
-#content-container div {
-    height: 25%;
-    background-color: rgb(197, 209, 216);
-    background-color: lightgray;
-    display: flex;
-    vertical-align: middle;
-}
-
-#content-container p {
-    margin: 10px;
-}
-
 .navbar {
     scroll-snap-align: start;
     width: 100%;
     background-color: white;
 }
-
 footer div {
     background-color: white;
 }
-
 
 /* background image */
 
@@ -59,13 +24,11 @@ footer div {
     width: 100%;
     height: 100vh;
 }
-
 #background-image {
     width: 100%;
     height: 100vh;
     object-fit: cover;
 }
-
 #detail-container {
     position: absolute;
     display: flex;
@@ -75,35 +38,27 @@ footer div {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.35);
 }
-
 .information {
     color: white;
     font-size: 280%;
     text-shadow: 2px 2px 8px black;
     margin: 15px;
 }
-
 #temp:hover {
     cursor: pointer;
 }
-
 @media (max-width: 1200px) {
     #content-container {
         width: 75%;
-        font-size: 150%;
+        font-size: 170%;
     }
     .information {
         font-size: 100%;
     }
-    #content-container {
-        font-size: 150%;
-        width: 75%;
-    }
 }
-
 @media (max-width: 600px) {
     #content-container {
-        font-size: 110%;
+        font-size: 150%;
         width: 100%;
     }
     .information {
@@ -115,10 +70,6 @@ footer div {
         flex-direction: column;
     }
 }
-
-
-/* footer */
-
 footer {
     scroll-snap-align: start;
 }
